// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildStatusBar snapshots > full status bar with Next transition 1`] = `
"<!----><div class="status-bar">
    <span><!--?-->London | <!--?-->Day (<!--?-->32°)</span>
    <!--?--><span>Next: <!--?-->Civil Twilight (<!--?-->17:25)</span>
  </div>"
`;

exports[`buildStatusBar snapshots > null location name (empty before pipe) 1`] = `
"<!----><div class="status-bar">
    <span><!--?--> | <!--?-->Day (<!--?-->89°)</span>
    <!--?--><span>Next: <!--?-->Civil Twilight (<!--?-->18:00)</span>
  </div>"
`;

exports[`buildStatusBar snapshots > single span (polar night, no transition) 1`] = `
"<!----><div class="status-bar">
    <span><!--?-->Arctic | <!--?-->Night (<!--?-->-22°)</span>
    <!--?-->
  </div>"
`;

exports[`cardStyles > matches snapshot 1`] = `
"
  :host {
    display: block;
    color-scheme: light dark;
    background: var(--ha-card-background, var(--card-background-color, var(--primary-background-color, Canvas)));
    color: var(--primary-text-color, CanvasText);
  }
  .card {
    border-radius: 0px;
    padding: 0px;
    color: inherit;
    font-family: sans-serif;
  }
  .date {
    font-size: 11px;
    color: var(--secondary-text-color, color-mix(in srgb, currentColor 60%, transparent));
    margin: 2px 2px;
  }
  .solar-view-wrapper {
    overflow: hidden;
    position: relative;
  }
  .status-bar {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background: color-mix(in srgb, currentColor 15%, transparent);
    font-size: 10px;
    color: inherit;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 3px 8px;
    pointer-events: none;
    font-family: sans-serif;
    z-index: 1;
  }
  .status-bar span {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .status-bar span:first-child {
    min-width: 0;
  }
  #solar-view {
    width: 100%;
    aspect-ratio: 1;
  }
  #solar-view svg {
    cursor: grab;
    user-select: none;
    touch-action: none;
  }
  .nav {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    margin-top: 2px;
    position: relative;
  }
  .nav button {
    background: color-mix(in srgb, currentColor 15%, transparent);
    color: inherit;
    border: 1px solid var(--divider-color, color-mix(in srgb, currentColor 15%, transparent));
    border-radius: 6px;
    height: 18px;
    line-height: 18px;
    padding: 0 5px;
    min-width: 20px;
    font-size: 10px;
    cursor: pointer;
    font-family: sans-serif;
    box-sizing: border-box;
  }
  .nav button:hover {
    background: var(--secondary-background-color, color-mix(in srgb, currentColor 20%, transparent));
  }
  .btn-group {
    display: flex;
    gap: 0;
  }
  .btn-group button {
    border-radius: 0;
  }
  .btn-group button:first-child {
    border-radius: 6px 0 0 6px;
  }
  .btn-group button:last-child {
    border-radius: 0 6px 6px 0;
  }
  .nav-spacer {
    width: 8px;
  }
  .zoom-level {
    background: color-mix(in srgb, currentColor 15%, transparent);
    color: inherit;
    border-top: 1px solid var(--divider-color, color-mix(in srgb, currentColor 15%, transparent));
    border-bottom: 1px solid var(--divider-color, color-mix(in srgb, currentColor 15%, transparent));
    height: 18px;
    line-height: 18px;
    padding: 0 4px;
    font-size: 9px;
    font-family: sans-serif;
    display: flex;
    align-items: center;
    box-sizing: border-box;
  }
  .card-version {
    font-size: 9px;
    color: var(--secondary-text-color, color-mix(in srgb, currentColor 30%, transparent));
    user-select: none;
    font-family: sans-serif;
    position: absolute;
    right: 6px;
    bottom: 4px;
  }
"
`;
